# gwsumm

./: .codeclimate.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .stylelintrc.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml
.travis/: build-nds2.sh  build-src-dependencies.sh
docs/: Makefile  automation.rst  cli.rst  conf.py  environment.yml  index.rst  install.rst  make.bat  modes.rst  overview.rst  plots.rst  requirements.txt  states.rst  tabs.rst
docs/_static/css/: custom.css
docs/_templates/: layout.html
docs/api/: index.rst
docs/api/api/: gwsumm.plot.SegmentDataPlot.rst  gwsumm.plot.SpectrogramDataPlot.rst  gwsumm.plot.SpectrumDataPlot.rst  gwsumm.plot.StateVectorDataPlot.rst  gwsumm.plot.TimeSeriesDataPlot.rst  gwsumm.plot.TimeSeriesHistogramPlot.rst  gwsumm.plot.TriggerHistogramPlot.rst  gwsumm.plot.TriggerRateDataPlot.rst  gwsumm.plot.TriggerTimeSeriesDataPlot.rst  gwsumm.state.SummaryState.rst  gwsumm.state.get_state.rst  gwsumm.state.get_states.rst  gwsumm.state.register_state.rst
docs/configuration/: data.rst  format.rst  index.rst  tabs.rst
docs/tabs/: api.rst  flavour.rst  index.rst  modes.rst  websites.rst
gwsumm/: __init__.py  __main__.py  _version.py  archive.py  batch.py  channels.py  config.py  data.py  globalv.py  io.py  mode.py  segments.py  triggers.py  units.py  utils.py  version.py
gwsumm/config/: __init__.py  defaults.ini
gwsumm/data/: __init__.py  coherence.py  core.py  mathutils.py  range.py  spectral.py  timeseries.py  utils.py
gwsumm/html/: __init__.py  bootstrap.py  html5.py  markup.py  static.py  tables.py  utils.py
gwsumm/html/bootstrap/: __init__.py
gwsumm/html/tests/: __init__.py  test_bootstrap.py  test_html5.py  test_static.py
gwsumm/plot/: __init__.py  builtin.py  builtin_plots.py  core.py  guardian.py  mixins.py  noisebudget.py  range.py  registry.py  segments.py  sei.py  triggers.py  utils.py
gwsumm/plot/guardian/: __init__.py  __main__.py  core.py
gwsumm/plot/guardian/tests/: __init__.py  test_main.py
gwsumm/plot/triggers/: __init__.py  __main__.py  core.py
gwsumm/plot/triggers/tests/: __init__.py  test_main.py
gwsumm/state/: __init__.py  all.py  core.py  registry.py
gwsumm/tabs/: __init__.py  builtin.py  core.py  data.py  etg.py  fscan.py  gracedb.py  guardian.py  hveto.py  ihope.py  management.py  misc.py  registry.py  sei.py  stamp.py
gwsumm/tests/: __init__.py  common.py  test_archive.py  test_batch.py  test_channels.py  test_config.py  test_data.py  test_mode.py  test_plot.py  test_tabs.py  test_utils.py
share/: bootstrap-ligo-l1.less  bootstrap-ligo.less  datepicker.css  datepicker.js  defaults.ini  gwsummary.css  gwsummary.js  h1_config.ini  l1_config.ini  matplotlib.ini
share/css/: gwsumm-all.css  gwsumm-c1.css  gwsumm-h1.css  gwsumm-l1.css  gwsumm-v1.css
share/examples/: imc.ini  lsc.ini
share/js/: gwsumm.js
share/less/: Makefile  README  gwsumm-all.less  gwsumm-c1.less  gwsumm-h1.less  gwsumm-v1.less  gwsumm.less
share/php/: list-dirs.php
share/sass/: gwsumm.scss
utils/: __init__.py  version.py
