; -- metadata ---------------

[versioneer]
VCS = git
style = pep440
versionfile_source = gwsumm/_version.py
versionfile_build = gwsumm/_version.py
tag_prefix =
parentdir_prefix =

[bdist_wheel]
universal = 1

[metadata]
name = gwsumm
author = Alex Urban, Duncan Macleod
author_email = alexander.urban@ligo.org
license = GPL-3.0-or-later
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://gwsumm.readthedocs.io
description = A python toolbox used by the LIGO Scientific Collaboration for detector characterisation
long_description = file: README.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >=30.3.0
install_requires =
	astropy >=3.0.0
	gwdatafind >=1.1.1
	gwdetchar >=2.0.0
	gwpy >=2.0.0
	gwtrigfind
	lalsuite
	ligo-segments
	lscsoft-glue >=1.60.0
	lxml
	markdown
	MarkupPy
	matplotlib >=3.1
	numpy >=1.16
	pygments >=2.7.0
	python-dateutil
	python-ligo-lw
	scipy >=1.2.0
tests_require =
	flake8
	pytest >=3.3.0
	pytest-cov >=2.4.0

[options.entry_points]
console_scripts =
	gw_summary = gwsumm.__main__:main
	gw_summary_pipe = gwsumm.batch:main
	gwsumm-plot-guardian = gwsumm.plot.guardian.__main__:main
	gwsumm-plot-triggers = gwsumm.plot.triggers.__main__:main

[options.extras_require]
dev =
	h5py
	ligo-gracedb >= 2.0.0
	pykerberos
doc =
	numpydoc
	sphinx
	sphinx-automodapi
	sphinx_bootstrap_theme
	sphinxcontrib-programoutput

[tool:pytest]
; print skip reasons
addopts = -r s

; -- tools ------------------

[coverage:run]
source = gwsumm
omit =
	gwsumm/tests/*
	gwsumm/html/tests/*
	gwsumm/*version*
	; omit scripts for now, will be done in a future PR
	gwsumm/__main__.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	gwsumm/_version.py,
	versioneer.py,
per-file-ignores =
	__init__.py:F401,
